--- a/отчет 3.md
+++ b/отчет 3.md
@@ -1,49 +1,54 @@
-# Отчет по лабораторной работе №2
+# Отчет по лабораторной работе №3
 ## по дисциплине Инфокоммуникационные системы и сети  
 
-### 1. _Цели и задачи практического задания:_ разработка первого PWA приложения на стэке технологий NodeJS.
-### 2. _Организация рабочего окружения:_  
-Сперва были установлены и настроены следующие компоненты:  
-    - Node.js - сервер запуска Javascript приложений;  
-    - Бразуер Google Chrome;  
-    - Библиотека Vue.js;  
-    - Workbox - набор библиотек и модулей Node.js;  
-    - Firebase - облачный сервис, который помогает автоматизировать задачи разработки бэкенда;  
-    - Репозиторий на Github.  
-### 3. _Разработка PWA приложения:_  
-   3.1 Создание рабочей директории и проекта приложения Vue в ней.
-![Изображение](https://sun9-22.userapi.com/c857524/v857524755/1ad621/4j_Fq8QPnUY.jpg)  
+### 1. _Цели и задачи практического задания:_ разработка приложения на библиотеке Vue.js
+Ранее были достигнуты необходимые промежуточные результаты - спроектированные экраны веб-приложения в редакторе [Figma](https://www.figma.com).  
+<p align="center">
+  <img width="250" src="https://sun9-42.userapi.com/c857328/v857328582/16b6d8/vdAql5Ze8Wc.jpg">
+  <img width="250" src="https://sun9-4.userapi.com/c857328/v857328582/16b6e0/8_X_tFaZheA.jpg">
+  <img width="250" src="https://sun9-59.userapi.com/c857328/v857328582/16b6e8/VvixKh6AHqU.jpg">
+</p>
+<p align="center">
+  <img width="250" src="https://sun9-37.userapi.com/c857328/v857328582/16b6f0/5Nzj-TLANAQ.jpg">
+  <img width="250" src="https://sun9-20.userapi.com/c857328/v857328582/16b6f8/-HGXprgmopM.jpg">
+</p>
 
-   3.2 Тестирование созданного приложения в браузере.
-![Изображение](https://sun9-68.userapi.com/c857224/v857224755/12eb2c/8xA8uumaiV8.jpg)  
+### 2. _Создание каркаса индивидуального проекта:_  
+Используя графическую оболочку vue-cli UI, был создан каркас приложения vue и подключены следующие компоненты:
+- awesome-vue;
+- bootstrapvue.
+Ниже показан процесс запуска графического интерфейса и пример работы по добавлению во Vue-проект новой зависимости.  
+![Изображение](https://sun9-58.userapi.com/c858032/v858032567/1d95fb/X4T0722TQfg.jpg)  
+![Изображение](https://sun9-3.userapi.com/c858032/v858032567/1d9605/wBHC55_Xicc.jpg)  
+![Изображение](https://sun9-35.userapi.com/c858032/v858032567/1d95f2/-sky-Hg7JS8.jpg)  
 
-   Были обнаружены некоторые проблемы с отображением приложения на iPhone 5/SE. 
-   
-   3.3 Установка поддержки декоратора Material Design для более аккуратной поддержки устройств с разными разрешениями.
-   
-   3.4 Генерация манифеста приложения с помощью [сервиса](https://app-manifest.firebaseapp.com).
-![Изображение](https://sun9-13.userapi.com/c857224/v857224755/12eb80/GZV7IOg_xNU.jpg) 
-Полученный сгенерированный манифест был помещен в директорию приложения. Ссылка на него была добавлена в index.html:
->&lt;link rel="manifest" href="/manifest.json">
+### 3. _Изучение компонентов Vue.js:_  
+Был изучен перечень компонентов фреймворка BootstrapVue и составлена спецификация используемых компонентов, исходя из сценариев работы системы в виде таблицы, которая представлена ниже.
+№ Экрана      |Компонент     |Свойства компонента|
+:-----------: | -------------|-------------|
+1 (Main)|Button | variant="outline-success"<br>size="lg"
+2 (Login)|Form Input | class="input" type="email" placeholder="Введите e-mail"
+2 (Login)|Form Input | class="input" type="password" placeholder="Введите пароль"
+2 (Login)|Button | variant="outline-success"<br>size="lg"
+3 (Registration)|Form Input | class="input" type="email" placeholder="Введите e-mail"
+3 (Registration)|Form Input | class="input" type="password" placeholder="Введите пароль"
+3 (Registration)|Button | variant="outline-success"<br>size="lg"
+4 (Order)|Button | variant="outline-success"<br>size="lg"
+4 (Order)|Form Input | class="input" type="text" :placeholder=addr
+5 (Payment)|Button | variant="outline-success"<br>size="lg"
 
-   3.5 Создание Service Worker - сценария, который выполняется в фоновом режиме, независимо от того, открыта ли веб-страница.
-Для этого была использована библиотека Workbox. 
-![Изображение](https://sun9-40.userapi.com/c857524/v857524755/1ad6b0/5D8dEh8L0A8.jpg)  
-Для подключения сервисного работника к приложению, в index.html был добавлен скрипт:
->&lt;script>
-     if ('serviceWorker' in navigator) {  
-	   window.addEventListener('load',function() {  
-	   navigator.serviceWorker.register('/sw.js');  
-	   });  
-    }  
-    &lt;/script>  
-    
-Затем проект был заново собран и запущен. DevTools показывает, что Service Worker успешно активирован и запущен.
-![Изображение](https://sun9-22.userapi.com/c858016/v858016755/1b3324/OfBv8aJIMj0.jpg)  
-
-   3.6 Проектирование экранов для мобильного приложения по заданной тематике согласно варианту (вариант 2 - такси).  
-Работа по макетированию приложения производилась в веб-версии [Figma](https://www.figma.com).  
-С результатами можно ознакомиться по [ссылке](https://www.figma.com/file/VC1Fs0KBK091zGcm8rt7HL/Green-eyed-Taxi?node-id=0%3A1).  
+### 4. _Верстка спроектированных экранов:_  
+Разработанные экраны были реализованы с использованием разметки BootstrapVue. Экраны не выполняют никаких действий и содержат заглушки для любых операций. Разработанные экраны продемонстрированы на изображениях ниже.  
+<p align="center">
+  <img width="250" src="https://sun9-45.userapi.com/c858032/v858032567/1d96cb/wisZ01ORGPU.jpg">
+  <img width="250" src="https://sun9-39.userapi.com/c858032/v858032567/1d96d3/Au3L2vwI8Qw.jpg">
+  <img width="250" src="https://sun9-4.userapi.com/c858032/v858032567/1d96db/5R9AdNTcpnM.jpg">
+</p>
+<p align="center">
+  <img width="250" src="https://sun9-30.userapi.com/c858032/v858032567/1d96e3/iaIfRwqXIIc.jpg">
+  <img width="250" src="https://sun9-3.userapi.com/c858032/v858032567/1d96eb/o3RKIQ4kOxQ.jpg">
+</p>
 
 ### 4. _Выводы:_  
-В ходе данной лабораторной работы были получены базовые навыки создания простейшего приложения с помощью фреймвора Vue на стэке технологий Node.js. Кроме того, были затронуты такие компоненты, как Workbox и Firebase. Само получившееся приложение запускалось в браузере Google Chrome и тестировалось средствами DevTools. В завершение, были получены навыки работы в среде макетирования Figma, с помощью которой был построен макет нашего мобильного приложения для службы такси, состоящий из 5 экранов.
+В ходе данной лабораторной работы были получены базовые навыки работы с vue-cli и с его графической оболочкой vue UI. С помощью неё был создан каркас разрабатываемого приложения и добавлены такие компоненты, как awesome-vue и bootstrapvue.  
+Затем, разработанные экраны приложения были сверстаны с использованием разметки BootstrapVue. Отличительная особенность Vue - реактивность. Она позволяет "на лету" отображать (функция render), удалять, изменять заранее описанные шаблоны (тег template). Таким образом, веб-странички, имеющие общий каркас и, возможно, даже одни и те же некоторые компоненты, могут быть созданы мгновенно из заранее созданных шаблонов. Кроме того, у шаблонов могут быть входные параметры, с помощью которых можно управлять контентом шаблона. Например, для двух одинаковых кнопок можно использовать один и тот же шаблон кнопки с параметром text, значение которого будет подставляться в кнопку.
