--- a/отчет 4.md
+++ b/отчет 4.md
@@ -1,22 +1,31 @@
-# Отчет по лабораторной работе №3
+# Отчет по лабораторной работе №4
 ## по дисциплине Инфокоммуникационные системы и сети  
 
-### 1. _Цели и задачи практического задания:_ разработка приложения на библиотеке Vue.js
-Ранее были достигнуты необходимые промежуточные результаты - спроектированные экраны веб-приложения в редакторе [Figma](https://www.figma.com).  
-<p align="center">
-  <img width="250" src="https://sun9-42.userapi.com/c857328/v857328582/16b6d8/vdAql5Ze8Wc.jpg">
-  <img width="250" src="https://sun9-4.userapi.com/c857328/v857328582/16b6e0/8_X_tFaZheA.jpg">
-  <img width="250" src="https://sun9-59.userapi.com/c857328/v857328582/16b6e8/VvixKh6AHqU.jpg">
-</p>
-<p align="center">
-  <img width="250" src="https://sun9-37.userapi.com/c857328/v857328582/16b6f0/5Nzj-TLANAQ.jpg">
-  <img width="250" src="https://sun9-20.userapi.com/c857328/v857328582/16b6f8/-HGXprgmopM.jpg">
-</p>
+### _Цели и задачи практического задания:_ изучение методов работы компонентов PWA приложений
 
-### 2. _Создание каркаса индивидуального проекта:_  
-Используя графическую оболочку vue-cli UI, был создан каркас приложения vue и подключены следующие компоненты:
-- awesome-vue;
-- bootstrapvue.
+### 1. _Service Worker_  
+В рамках задания была изучена предложенная документация по компоненту Service Worker.  
+Ответы на вопроосы:  
+
+_Какие технологии лежат в основе Service Worker?_  
+- JavaScript;
+- архитектура на промисах (Promise);
+- обязательность HTTPS.  
+  
+_Как работает Service Worker?_  
+Сперва веб-страница регистрирует service worker, используя .js-файл, содержащий код сервис-воркера. Service worker устанавливается, активируется и начинает в фоновом режиме прослушивать события "fetch" и "message" и при необходимости их изменять или отменять совсем. Также, при обработке события install в коде сервис-воркера происходит открытие кэша и кэширование необходимых материалов. Этот функционал в дальнейшем позволит веб-приложению работать оффлайн.  
+
+_Возможно ли проксирование запросов с разных удаленных серверов с разными IP адресами? Почему и как можно реализовать?_  
+Нет, Service Worker работает только с тем адресом, с которого загружен его код. То есть можно перехватывать только запросы к своему домену. Притом, данная функция доступна только для не кросдоменных запросов (CORS). Для проксирования запросов с чужих серверов в 2016 году Google предлагал введение события "foreignfetch", но на данный момент эту идею полностью закрыли. Возможно, реализовать такое можно, используя Cross-Origin worker'a.  
+
+_Сохраняется ли проксированный контент? Как настроить сохранение запросов в ServiceWoker?_  
+Данные в кеше сохраняются до тех пор, пока разработчик сам не решит их удалить. Для кэширования следует использовать встроенный API хранилища Service Worker — cache — глобальный для всех сервис-воркеров, который позволяет нам хранить результаты запросов.  
+
+_Какие есть ограничения в работе Service Woker?_  
+- работа только на localhost либо по протоколу HTTPS;
+- поддерживаемость далеко не всеми браузерами;
+- невозможность проксировать CORS-запросы.  
+
 Ниже показан процесс запуска графического интерфейса и пример работы по добавлению во Vue-проект новой зависимости.  
 ![Изображение](https://sun9-58.userapi.com/c858032/v858032567/1d95fb/X4T0722TQfg.jpg)  
 ![Изображение](https://sun9-3.userapi.com/c858032/v858032567/1d9605/wBHC55_Xicc.jpg)  
