--- a/отчет 4.md
+++ b/отчет 4.md
@@ -26,37 +26,24 @@ _Какие есть ограничения в работе Service Woker?_
 - поддерживаемость далеко не всеми браузерами;
 - невозможность проксировать CORS-запросы.  
 
-Ниже показан процесс запуска графического интерфейса и пример работы по добавлению во Vue-проект новой зависимости.  
-![Изображение](https://sun9-58.userapi.com/c858032/v858032567/1d95fb/X4T0722TQfg.jpg)  
-![Изображение](https://sun9-3.userapi.com/c858032/v858032567/1d9605/wBHC55_Xicc.jpg)  
-![Изображение](https://sun9-35.userapi.com/c858032/v858032567/1d95f2/-sky-Hg7JS8.jpg)  
+### 2. _IndexedDB_  
+В рамках данного задания была изучена предложенная документация по IndexedDB.  
+Ответы на вопроосы:  
 
-### 3. _Изучение компонентов Vue.js:_  
-Был изучен перечень компонентов фреймворка BootstrapVue и составлена спецификация используемых компонентов, исходя из сценариев работы системы в виде таблицы, которая представлена ниже.
-№ Экрана      |Компонент     |Свойства компонента|
-:-----------: | -------------|-------------|
-1 (Main)|Button | variant="outline-success"<br>size="lg"
-2 (Login)|Form Input | class="input" type="email" placeholder="Введите e-mail"
-2 (Login)|Form Input | class="input" type="password" placeholder="Введите пароль"
-2 (Login)|Button | variant="outline-success"<br>size="lg"
-3 (Registration)|Form Input | class="input" type="email" placeholder="Введите e-mail"
-3 (Registration)|Form Input | class="input" type="password" placeholder="Введите пароль"
-3 (Registration)|Button | variant="outline-success"<br>size="lg"
-4 (Order)|Button | variant="outline-success"<br>size="lg"
-4 (Order)|Form Input | class="input" type="text" :placeholder=addr
-5 (Payment)|Button | variant="outline-success"<br>size="lg"
+_Каким типом хранилища является IndexedDB?_  
+Это хранилище ключей/значений (база данных noSQL).  
+  
+_Какая последовательность работы с хранилищем?_  
+Работа с базой данных начинается с запроса на открытие. Затем необходимо создать хранилище объектов в базе данных, над которой будут выполняться операции. Далее запустить транзакцию и задать некоторый запрос, например, добавление или извлечение данных. Дождаться завершения операции, "слушая" событие DOM, на которое должен быть установлен обработчик, и сделать что-то с результатами.  
 
-### 4. _Верстка спроектированных экранов:_  
-Разработанные экраны были реализованы с использованием разметки BootstrapVue. Экраны не выполняют никаких действий и содержат заглушки для любых операций. Разработанные экраны продемонстрированы на изображениях ниже.  
-<p align="center">
-  <img width="250" src="https://sun9-45.userapi.com/c858032/v858032567/1d96cb/wisZ01ORGPU.jpg">
-  <img width="250" src="https://sun9-39.userapi.com/c858032/v858032567/1d96d3/Au3L2vwI8Qw.jpg">
-  <img width="250" src="https://sun9-4.userapi.com/c858032/v858032567/1d96db/5R9AdNTcpnM.jpg">
-</p>
-<p align="center">
-  <img width="250" src="https://sun9-30.userapi.com/c858032/v858032567/1d96e3/iaIfRwqXIIc.jpg">
-  <img width="250" src="https://sun9-3.userapi.com/c858032/v858032567/1d96eb/o3RKIQ4kOxQ.jpg">
-</p>
+_Какой жизненный цикл хранилища?_  
+Открытие БД -> Создание хранилища -> Некоторая работа -> Удаление хранилища -> Удаление БД   
+
+_Будет ли доступна информация из хранилища при закрытии веб-приложения? Если нет – какой тип хранилища надо использовать?_  
+Да, IndexedDB предоставляет возможность постоянно хранить данные внутри пользовательского браузера. Это позволяет создавать web-приложения с богатыми возможностями в независимости от доступа к сети. Такие приложения могут работать как online, так и offline.  
+
+_Будет ли доступно хранилище двум одновременно открытым экземплярам веб-приложения? Почему?_  
+IndexedDB - транзакционная БД. Все, что происходит внутри - происходит в контексте транзакции. Кроме того, концепция IndexedDB гарантирует атомарность транзакций. К тому же данное хранилище - асинхронное. Всё это позволяет поддерживать доступность хранилища двум и более одновременно открытым экземплярам приложения.  
 
 ### 4. _Выводы:_  
 В ходе данной лабораторной работы были получены базовые навыки работы с vue-cli и с его графической оболочкой vue UI. С помощью неё был создан каркас разрабатываемого приложения и добавлены такие компоненты, как awesome-vue и bootstrapvue.  
