--- a/отчет 4.md
+++ b/отчет 4.md
@@ -7,21 +7,21 @@
 В рамках задания была изучена предложенная документация по компоненту Service Worker.  
 Ответы на вопроосы:  
 
-_Какие технологии лежат в основе Service Worker?_  
+_1.1 Какие технологии лежат в основе Service Worker?_  
 - JavaScript;
 - архитектура на промисах (Promise);
 - обязательность HTTPS.  
   
-_Как работает Service Worker?_  
+_1.2 Как работает Service Worker?_  
 Сперва веб-страница регистрирует service worker, используя .js-файл, содержащий код сервис-воркера. Service worker устанавливается, активируется и начинает в фоновом режиме прослушивать события "fetch" и "message" и при необходимости их изменять или отменять совсем. Также, при обработке события install в коде сервис-воркера происходит открытие кэша и кэширование необходимых материалов. Этот функционал в дальнейшем позволит веб-приложению работать оффлайн.  
 
-_Возможно ли проксирование запросов с разных удаленных серверов с разными IP адресами? Почему и как можно реализовать?_  
+_1.3 Возможно ли проксирование запросов с разных удаленных серверов с разными IP адресами? Почему и как можно реализовать?_  
 Нет, Service Worker работает только с тем адресом, с которого загружен его код. То есть можно перехватывать только запросы к своему домену. Притом, данная функция доступна только для не кросдоменных запросов (CORS). Для проксирования запросов с чужих серверов в 2016 году Google предлагал введение события "foreignfetch", но на данный момент эту идею полностью закрыли. Возможно, реализовать такое можно, используя Cross-Origin worker'a.  
 
-_Сохраняется ли проксированный контент? Как настроить сохранение запросов в ServiceWoker?_  
+_1.4 Сохраняется ли проксированный контент? Как настроить сохранение запросов в ServiceWoker?_  
 Данные в кеше сохраняются до тех пор, пока разработчик сам не решит их удалить. Для кэширования следует использовать встроенный API хранилища Service Worker — cache — глобальный для всех сервис-воркеров, который позволяет нам хранить результаты запросов.  
 
-_Какие есть ограничения в работе Service Woker?_  
+_1.5 Какие есть ограничения в работе Service Woker?_  
 - работа только на localhost либо по протоколу HTTPS;
 - поддерживаемость далеко не всеми браузерами;
 - невозможность проксировать CORS-запросы.  
@@ -30,19 +30,19 @@ _Какие есть ограничения в работе Service Woker?_
 В рамках данного задания была изучена предложенная документация по IndexedDB.  
 Ответы на вопроосы:  
 
-_Каким типом хранилища является IndexedDB?_  
+_2.1 Каким типом хранилища является IndexedDB?_  
 Это хранилище ключей/значений (база данных noSQL).  
   
-_Какая последовательность работы с хранилищем?_  
+_2.2 Какая последовательность работы с хранилищем?_  
 Работа с базой данных начинается с запроса на открытие. Затем необходимо создать хранилище объектов в базе данных, над которой будут выполняться операции. Далее запустить транзакцию и задать некоторый запрос, например, добавление или извлечение данных. Дождаться завершения операции, "слушая" событие DOM, на которое должен быть установлен обработчик, и сделать что-то с результатами.  
 
-_Какой жизненный цикл хранилища?_  
+_2.3 Какой жизненный цикл хранилища?_  
 Открытие БД -> Создание хранилища -> Некоторая работа -> Удаление хранилища -> Удаление БД   
 
-_Будет ли доступна информация из хранилища при закрытии веб-приложения? Если нет – какой тип хранилища надо использовать?_  
+_2.4 Будет ли доступна информация из хранилища при закрытии веб-приложения? Если нет – какой тип хранилища надо использовать?_  
 Да, IndexedDB предоставляет возможность постоянно хранить данные внутри пользовательского браузера. Это позволяет создавать web-приложения с богатыми возможностями в независимости от доступа к сети. Такие приложения могут работать как online, так и offline.  
 
-_Будет ли доступно хранилище двум одновременно открытым экземплярам веб-приложения? Почему?_  
+_2.5 Будет ли доступно хранилище двум одновременно открытым экземплярам веб-приложения? Почему?_  
 IndexedDB - транзакционная БД. Все, что происходит внутри - происходит в контексте транзакции. Кроме того, концепция IndexedDB гарантирует атомарность транзакций. К тому же данное хранилище - асинхронное. Всё это позволяет поддерживать доступность хранилища двум и более одновременно открытым экземплярам приложения.  
 
 ### 3. _LocalStorage, SessionStorage_  
@@ -51,19 +51,19 @@ IndexedDB - транзакционная БД. Все, что происходи
   
 Ответы на вопроосы:  
 
-_Каким типом хранилища является LocalStorage и SessionStorage?_  
+_3.1 Каким типом хранилища является LocalStorage и SessionStorage?_  
 Это тоже хранилище ключей/значений.  
   
-_Какая последовательность работы с хранилищем?_  
-Сперва необходимо с помощью метода setItem(key, value) назначить пару/ключ значение. Получить записанные данные по ключу можно с помощью метода getItem(key). Если нужно удалить данные с ключом key - используется метод removeItem(key).  
+_3.2 Какая последовательность работы с хранилищем?_  
+Сперва необходимо с помощью метода setItem(key, value) назначить пару/ключ значение. Получить записанные данные по ключу можно с помощью метода getItem(key). Если нужно удалить данные с ключом key - используется метод removeItem(key). Для полной очистки хранилища существует метод clear().  
 
-_Какой жизненный цикл хранилища?_  
+_3.3 Какой жизненный цикл хранилища?_  
 Данные, которые записаны в sessionStorage, сохраняются после обновления страницы, а данные, записанные в localStorage - даже после перезапуска браузера и ОС.   
 
-_Будет ли доступна информация из хранилища при закрытии веб-приложения? Если нет – какой тип хранилища надо использовать?_  
+_3.4 Будет ли доступна информация из хранилища при закрытии веб-приложения? Если нет – какой тип хранилища надо использовать?_  
 Да, но только данные, записанные в localStorage, поскольку они сохраняются даже после перезапуска браузера и даже ОС. Данные, записанные в sessionStorage, не сохранятся после закрытия приложения. Более того, хранилище sessionStorage даже для разных вкладок одного и того же приложения разное.  
 
-_Будет ли доступно хранилище двум одновременно открытым экземплярам веб-приложения? Почему?_  
+_3.5 Будет ли доступно хранилище двум одновременно открытым экземплярам веб-приложения? Почему?_  
 Хранилище localStorage привязано к источнику (домен/протокол/порт). Это значит, что разные протоколы или поддомены определяют разные объекты хранилища, и они не могут получить доступ к данным друг друга. Поэтому, два одновременно открытых экземпляра приложения будут иметь доступ к хранилищу, ведь они будут на одних и тех же доменах/протоколах/портах. 
 
 ### 4. _Выводы:_  
