--- a/отчет 4.md
+++ b/отчет 4.md
@@ -23,7 +23,7 @@ _1.4 Сохраняется ли проксированный контент? К
 
 _1.5 Какие есть ограничения в работе Service Woker?_  
 - работа только на localhost либо по протоколу HTTPS;
-- поддерживаемость далеко не всеми браузерами;
+- поддерживаемость далеко не всеми браузерами (только самыми популярными и крупными);
 - невозможность проксировать CORS-запросы.  
 
 ### 2. _IndexedDB_  
