--- a/отчет 4.md
+++ b/отчет 4.md
@@ -47,7 +47,7 @@ IndexedDB - транзакционная БД. Все, что происходи
 
 ### 3. _LocalStorage, SessionStorage_  
 В рамках данного задания была изучена предложенная документация по LocalStorage и SessionStorage.  
-Также, было выполнено задание: создать поле textarea, значение которого будет автоматически сохраняться при каждом его изменении. Когда пользователь закроет страницу и потом откроет её заново он должен увидеть последнее введённое значение. Исходный код выполненного задание размещен в ветке ToolsPWApplication данного репозитория.  
+Также, было выполнено задание: создать поле textarea, значение которого будет автоматически сохраняться при каждом его изменении. Когда пользователь закроет страницу и потом откроет её заново он должен увидеть последнее введённое значение. Исходный код выполненного задание размещен в ветке [ToolsPWApplication](https://github.com/Xander11rgn/ISN_2020_2/tree/ToolsPWApplication/localStorage) данного репозитория.  
   
 Ответы на вопроосы:  
 
