--- a/отчет 4.md
+++ b/отчет 4.md
@@ -47,7 +47,7 @@ IndexedDB - транзакционная БД. Все, что происходи
 
 ### 3. _LocalStorage, SessionStorage_  
 В рамках данного задания была изучена предложенная документация по LocalStorage и SessionStorage.  
-Также, было выполнено задание: создать поле textarea, значение которого будет автоматически сохраняться при каждом его изменении. Когда пользователь закроет страницу и потом откроет её заново он должен увидеть последнее введённое значение. Исходный код выполненного задание размещен в ветке [ToolsPWApplication](https://github.com/Xander11rgn/ISN_2020_2/tree/ToolsPWApplication/localStorage) данного репозитория.  
+Также, было выполнено задание: создать поле textarea, значение которого будет автоматически сохраняться при каждом его изменении. Когда пользователь закроет страницу и потом откроет её заново он должен увидеть последнее введённое значение. Исходный код выполненного задания размещен в ветке [ToolsPWApplication](https://github.com/Xander11rgn/ISN_2020_2/tree/ToolsPWApplication/localStorage) данного репозитория.  
   
 Ответы на вопроосы:  
 
@@ -64,7 +64,17 @@ _3.4 Будет ли доступна информация из хранилищ
 Да, но только данные, записанные в localStorage, поскольку они сохраняются даже после перезапуска браузера и даже ОС. Данные, записанные в sessionStorage, не сохранятся после закрытия приложения. Более того, хранилище sessionStorage даже для разных вкладок одного и того же приложения разное.  
 
 _3.5 Будет ли доступно хранилище двум одновременно открытым экземплярам веб-приложения? Почему?_  
-Хранилище localStorage привязано к источнику (домен/протокол/порт). Это значит, что разные протоколы или поддомены определяют разные объекты хранилища, и они не могут получить доступ к данным друг друга. Поэтому, два одновременно открытых экземпляра приложения будут иметь доступ к хранилищу, ведь они будут на одних и тех же доменах/протоколах/портах. 
+Хранилище localStorage привязано к источнику (домен/протокол/порт). Это значит, что разные протоколы или поддомены определяют разные объекты хранилища, и они не могут получить доступ к данным друг друга. Поэтому, два одновременно открытых экземпляра приложения будут иметь доступ к хранилищу, ведь они будут на одних и тех же доменах/протоколах/портах.  
+
+### 4. _Push Notification_  
+В рамках задания была изучена предложенная документация по созданию push-уведомлений.  
+Также, было выполнено задание: дополнить разработанное ранее vue-приложение в практическом задании push-уведомлениями согласно следующих требований к ним:  
+- случайное время уведомления;
+- случайный текст на уведомлении;
+- уведомления являются периодичными;
+- уведомления хранятся в локальном хранилище.  
+
+Исходный код выполненного задания размещен в ветке [ToolsPWApplication](https://github.com/Xander11rgn/ISN_2020_2/tree/ToolsPWApplication/localStorage) данного репозитория.  
 
 ### 4. _Выводы:_  
 В ходе данной лабораторной работы были получены базовые навыки работы с vue-cli и с его графической оболочкой vue UI. С помощью неё был создан каркас разрабатываемого приложения и добавлены такие компоненты, как awesome-vue и bootstrapvue.  
