--- a/отчет 4.md
+++ b/отчет 4.md
@@ -76,6 +76,12 @@ _3.5 Будет ли доступно хранилище двум одновре
 
 Исходный код выполненного задания размещен в ветке [ToolsPWApplication](https://github.com/Xander11rgn/ISN_2020_2/tree/ToolsPWApplication/localStorage) данного репозитория.  
 
+Демонстрация push-уведомления  
+![](https://sun9-28.userapi.com/BJ8vqyWXRXtHRKoAsf2fzPThJJL3bmPxtMIPrQ/lLvUpf1gmhc.jpg)  
+  
+Демонстрация хранения уведомлений в localStorage  
+![](https://sun9-31.userapi.com/9CaZ0n0QqsF4nncuiCEEpA9iRY8XvpRpqqLMyA/RLU534tCehU.jpg)
+
 ### 4. _Выводы:_  
 В ходе данной лабораторной работы были получены базовые навыки работы с vue-cli и с его графической оболочкой vue UI. С помощью неё был создан каркас разрабатываемого приложения и добавлены такие компоненты, как awesome-vue и bootstrapvue.  
 Затем, разработанные экраны приложения были сверстаны с использованием разметки BootstrapVue. Отличительная особенность Vue - реактивность. Она позволяет "на лету" отображать (функция render), удалять, изменять заранее описанные шаблоны (тег template). Таким образом, веб-странички, имеющие общий каркас и, возможно, даже одни и те же некоторые компоненты, могут быть созданы мгновенно из заранее созданных шаблонов. Кроме того, у шаблонов могут быть входные параметры, с помощью которых можно управлять контентом шаблона. Например, для двух одинаковых кнопок можно использовать один и тот же шаблон кнопки с параметром text, значение которого будет подставляться в кнопку.
