--- a/отчет 4.md
+++ b/отчет 4.md
@@ -83,5 +83,5 @@ _3.5 Будет ли доступно хранилище двум одновре
 ![](https://sun9-31.userapi.com/9CaZ0n0QqsF4nncuiCEEpA9iRY8XvpRpqqLMyA/RLU534tCehU.jpg)
 
 ### 4. _Выводы:_  
-В ходе данной лабораторной работы были получены базовые навыки работы с vue-cli и с его графической оболочкой vue UI. С помощью неё был создан каркас разрабатываемого приложения и добавлены такие компоненты, как awesome-vue и bootstrapvue.  
-Затем, разработанные экраны приложения были сверстаны с использованием разметки BootstrapVue. Отличительная особенность Vue - реактивность. Она позволяет "на лету" отображать (функция render), удалять, изменять заранее описанные шаблоны (тег template). Таким образом, веб-странички, имеющие общий каркас и, возможно, даже одни и те же некоторые компоненты, могут быть созданы мгновенно из заранее созданных шаблонов. Кроме того, у шаблонов могут быть входные параметры, с помощью которых можно управлять контентом шаблона. Например, для двух одинаковых кнопок можно использовать один и тот же шаблон кнопки с параметром text, значение которого будет подставляться в кнопку.
+В ходе данной лабораторной работы были получены знания и навыки работы с такими компонентами PWA, как Service Worker, IndexedDB, localStorage и sessionStorage, а также рассмотрен функционал push-уведомлений. Все эти компоненты в совокупности могут значительно улучшить производительность и юзабилити веб-приложения, обеспечить работу, не зависящую от наличия соединения с интернетом, ускорить процесс загрузки страниц и т.п.  
+В качестве практических заданий были реализованы два проекта: работа с localStorage и работа с push-уведомлениями. При работе с уведомлениями необходимо было хранить уведомления в локальном хранилище. В качестве него был выбран localStorage, как наиболее подходящий вариант, поскольку sessionStorage живет лишь в пределах одной вкладки.
